--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,17 @@
 		</dependency>
 
 
-
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-core</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-test</artifactId>
+			<version>2.4.1</version>
+			<scope>test</scope>
+		</dependency>
 
 
 
